--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "main": "mdb_handler.js",
   "dependencies": {
     "async": "^1.4.0",
+    "circular": "^1.0.5",
+    "gridfs-stream": "^1.1.1",
     "jsonschema": "^1.0.2",
     "mongodb": "^2.0.36"
-  }
+  },
 }
